  Usage should generally be migrated to WANObjectCache, or if you really need
  the internal object, use ObjectCache::getLocalClusterInstance instead.
* CategoryFinder, which was deprecated in 1.31 and hard-deprecated in 1.35,
  has been removed.
* Sanitizer::escapeId(), deprecated in 1.30, has been removed.
* The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
* The support for IE8 has been dropped.
* Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
  deprecated since 1.35, has been removed.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery() deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* The following User methods, deprecated and moved to BlockManager in 1.34,
  were removed: isDnsBlacklisted, inDnsBlacklist, isLocallyBlockedProxy,
  trackBlockWithCookie.
* …

=== Deprecations in 1.36 ===
* The User class, which was marked as @newable in 1.35, is no longer newable,
  meaning that it is no longer safe to manually call the constructor via
  `new User`. Instead, use the UserFactory service.
* Use of the `preprocessor=Preprocessor_DOM` option in parser test files has
  been deprecated.  Preprocessor_DOM was removed in 1.35.
* ParserOptions::setTidy() has been deprecated.  It has had no effect since
  1.35.
* Sanitizer::escapeIdReferenceList() has been deprecated; it will eventually
  be made private to the class, as it appears to have no uses outside the
  Sanitizer class.
* Skin::getIndicatorsHTML() is deprecated. The functionality can be retained
  by reimplementing the method using the raw indicators data from
  OutputPage::getIndicators.